k8s_service_ingress/course-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: course-app-service
  labels:
    app: course-app
spec:
  type: ClusterIP           # Ingress → ClusterIP → поди (NodePort більше не потрібен)
  selector:
    app: course-app         # балансує трафік між усіма репліками автоматично
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
